added sliding pane drawer

--- a/TheWeekendAgriculturist/res/values/dimens.xml
+++ b/TheWeekendAgriculturist/res/values/dimens.xml
@@ -3,5 +3,33 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
+    
+    <dimen name="value_2">2dp</dimen>
+    <dimen name="value_3">3dp</dimen>
+    <dimen name="value_5">5dp</dimen>
+    <dimen name="value_7">7dp</dimen>
+    <dimen name="value_10">10dp</dimen>
+    <dimen name="value_12">12dp</dimen>
+    <dimen name="value_15">15dp</dimen>
+    <dimen name="value_20">20dp</dimen>
+    <dimen name="value_25">25dp</dimen>
+    
+    <!-- Sliding pane -->
+    <dimen name="sliding_pane_footer_height">80dp</dimen>
+    <dimen name="sliding_pane_row_height">60dp</dimen>
+    <dimen name="sliding_pane_text_size">20sp</dimen>
+    
+    
+    <!-- Intro Screen -->
+    <dimen name="intro_title_text_size">24sp</dimen>
+    
+   
+    <!-- Title and menu bar -->
+    <dimen name="menu_button_height">40dp</dimen>
+    <dimen name="menu_button_width">80dp</dimen>
+    <dimen name="activity_title_bar_height">40dp</dimen>
+    
+    
 
 </resources>
