--- a/TheWeekendAgriculturist/res/values/dimens.xml
+++ b/TheWeekendAgriculturist/res/values/dimens.xml
@@ -23,6 +23,10 @@
     
     <!-- Intro Screen -->
     <dimen name="intro_title_text_size">24sp</dimen>
+    <dimen name="intro_image_height">200dp</dimen>
+    <dimen name="scrollview_padding">16dp</dimen>
+    <dimen name="footer_height">60dp</dimen>
+    <dimen name="intro_imagebutton_padding">18dp</dimen>
     
    
     <!-- Title and menu bar -->
