--- a/TheWeekendAgriculturist/res/layout/fragment_suggestions.xml
+++ b/TheWeekendAgriculturist/res/layout/fragment_suggestions.xml
@@ -1,44 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
     <RelativeLayout
+        android:id="@+id/layout_suggestion_header"
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_title_bar_height"
         android:background="@color/blackColor" >
 
         <ImageButton
             android:id="@+id/menu_btn"
-           	android:layout_width="@dimen/menu_button_width"
+            android:layout_width="@dimen/menu_button_width"
             android:layout_height="@dimen/menu_button_height"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/value_5"
             android:background="@android:color/transparent"
             android:contentDescription="@string/description_image_default"
-            android:scaleType="fitXY"
-            android:src="@drawable/menu_btn" 
-            android:paddingRight="40dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp"
-           	/>
+            android:paddingLeft="10dp"
+            android:paddingRight="40dp"
+            android:paddingTop="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/menu_btn" />
+
         <TextView
             android:id="@+id/activity_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="@android:color/white"
             android:text="@string/title_suggestions"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/intro_title_text_size" />
+    </RelativeLayout>
 
-        </RelativeLayout>
-      
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Suggestions"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/layout_suggestion_header"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/value_5" >
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" 
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/send_suggestions_button_height"
+            android:layout_margin="@dimen/value_10"
+            android:background="@color/green"
+            android:gravity="center_horizontal"
+            android:text="@string/send"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/intro_title_text_size" />
-</LinearLayout>
+    </LinearLayout>
+
+</RelativeLayout>
