--- a/TheWeekendAgriculturist/res/values/dimens.xml
+++ b/TheWeekendAgriculturist/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     
-    
+    <dimen name="value_1">1dp</dimen>
     <dimen name="value_2">2dp</dimen>
     <dimen name="value_3">3dp</dimen>
     <dimen name="value_5">5dp</dimen>
@@ -34,6 +34,11 @@
     <dimen name="menu_button_width">80dp</dimen>
     <dimen name="activity_title_bar_height">40dp</dimen>
     
+    <!-- Suggestions -->
+    <dimen name="send_suggestions_button_height">50dp</dimen>
     
 
+    <!-- Events -->
+    <dimen name="header_text_size">24sp</dimen>
+    
 </resources>
